Fixed webpack warning bug - triggered because 'align-items: start' isn't yet fully supported. It should be 'align-items: flex-start' at this point.

--- a/src/styles/modules/discount-field.module.css
+++ b/src/styles/modules/discount-field.module.css
@@ -1,6 +1,6 @@
 .discountFieldset {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
 }
 .discountInput input,
 .applyButton {
